  package protobuf_unittest;


option py_generic_services = true; //auto

// uoo

import "src/test/resources/unittest_import.proto";

message TestAllTypes {
  message NestedMessage {
    // The field name "b" fails to compile in proto1 because it conflicts with
    // a local variable named "b" in one of the generated methods.  Doh.
    // This file needs to compile in proto1 to test backwards-compatibility.
    optional int32 bb = 1;
  }
  
  optional int32 bb = 1;
  
  enum NestedEnum {
    FOO = 1;
    BAR = 2;
    BAZ = 3;
  }
}